# Simple-Math-Library

./: CMakeLists.txt  README.md
include/: ifs.h
test/: CMakeLists.txt  main.c  quat.c  vec3.c
