cmake_minimum_required(VERSION 3.15)

add_executable(TestVec2 "vec2.c")
add_executable(TestVec3 "vec3.c")
add_executable(TestQuat "quat.c")
add_executable(TestMat22 "mat22.c")
add_executable(TestMat33 "mat33.c")
add_executable(TestMat44 "mat44.c")
add_executable(TestGeneric "generic.c")

target_link_libraries(TestVec2 PRIVATE SimpleMathLibrary)
target_link_libraries(TestVec3 PRIVATE SimpleMathLibrary)
target_link_libraries(TestQuat PRIVATE SimpleMathLibrary)
target_link_libraries(TestMat22 PRIVATE SimpleMathLibrary)
target_link_libraries(TestMat33 PRIVATE SimpleMathLibrary)
target_link_libraries(TestMat44 PRIVATE SimpleMathLibrary)
target_link_libraries(TestGeneric PRIVATE SimpleMathLibrary)
